[gd_scene load_steps=7 format=3 uid="uid://cq8eyikqsfmyc"]

[ext_resource type="Script" path="res://Scripts/enemy/void_orb.gd" id="1_vgd44"]
[ext_resource type="Texture2D" uid="uid://m1ulxsej3gw7" path="res://Assets/Sprites/enemies/Onyx_demon.png" id="2_uu0o1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_thkn5"]
atlas = ExtResource("2_uu0o1")
region = Rect2(368, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_gpdnh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_thkn5")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_06mxh"]
radius = 4.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lms3f"]
radius = 1.0
height = 14.0

[node name="VoidOrb" type="Area2D"]
z_index = 1
collision_layer = 0
collision_mask = 3
script = ExtResource("1_vgd44")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gpdnh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_06mxh")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_lms3f")

[node name="immunity_timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="immunity_timer" to="." method="_on_immunity_timer_timeout"]
